add current user to chat operations